20201119/ipython.txt
Last login: Fri Nov 13 10:15:27 on ttys005

The default interactive shell is now zsh.
To update your account to use zsh, please run `chsh -s /bin/zsh`.
For more details, please visit https://support.apple.com/kb/HT208050.
Radus-MacBook-Pro-2:~ radumir$ ipython
Python 3.7.2 (v3.7.2:9a3ffc0492, Dec 24 2018, 02:44:43) 
Type 'copyright', 'credits' or 'license' for more information
IPython 7.13.0 -- An enhanced Interactive Python. Type '?' for help.

In [1]: a = True                                                                                                                        

In [2]: a                                                                                                                               
Out[2]: True

In [3]: b = True                                                                                                                        

In [4]: a and b                                                                                                                         
Out[4]: True

In [5]: a or b                                                                                                                          
Out[5]: True

In [6]: not a and b                                                                                                                     
Out[6]: False

In [7]: def fb(): 
   ...:     print('b') 
   ...:     return True 
   ...:                                                                                                                                 

In [8]: def fa(): 
   ...:     print('a') 
   ...:     return False 
   ...:                                                                                                                                 

In [9]: fa()                                                                                                                            
a
Out[9]: False

In [10]: fb()                                                                                                                           
b
Out[10]: True

In [11]: fb() and fa()                                                                                                                  
b
a
Out[11]: False

In [12]: fa() and fb()                                                                                                                  
a
Out[12]: False

In [13]: fb() or fa()                                                                                                                   
b
Out[13]: True

In [14]: fa() or fb()                                                                                                                   
a
b
Out[14]: True

In [15]: # atribuire                                                                                                                    

In [16]: a = True # atribuire                                                                                                           

In [17]: a = 1                                                                                                                          

In [18]: type(a)                                                                                                                        
Out[18]: int

In [19]: a = 1.2                                                                                                                        

In [20]: type(a)                                                                                                                        
Out[20]: float

In [21]: a = "abc"                                                                                                                      

In [22]: type(a)                                                                                                                        
Out[22]: str

In [23]: range(3)                                                                                                                       
Out[23]: range(0, 3)

In [24]: list(range(3))                                                                                                                 
Out[24]: [0, 1, 2]

In [25]: for nr in range(3): 
    ...:     print(nr) 
    ...:                                                                                                                                
0
1
2

In [26]: class Punct2D(): 
    ...:     def __init__(self,x,y): 
    ...:         self.x = x 
    ...:         self.y = y 
    ...:                                                                                                                                

In [27]: p1\ = Punct2D(1,0)                                                                                                             
  File "<ipython-input-27-75ea95bed47d>", line 1
    p1\ = Punct2D(1,0)
                      ^
SyntaxError: unexpected character after line continuation character


In [28]: p1 = Punct2D(1,0)                                                                                                              

In [29]: p1.x                                                                                                                           
Out[29]: 1

In [30]: p1.y                                                                                                                           
Out[30]: 0

In [31]: p2 = Punct2D(2,3)                                                                                                              

In [32]: p2.x                                                                                                                           
Out[32]: 2

In [33]: p2.y                                                                                                                           
Out[33]: 3

In [34]: 1 % 3                                                                                                                          
Out[34]: 1

In [35]: 2 % 3                                                                                                                          
Out[35]: 2

In [36]: 3 % 3                                                                                                                          
Out[36]: 0

In [37]: 4 % 3                                                                                                                          
Out[37]: 1

In [38]: 5 % 3                                                                                                                          
Out[38]: 2

In [39]: 6 % 3                                                                                                                          
Out[39]: 0

In [40]:                                                                                                                                
